--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Vinird.GitHub.io</title>
+    <title>VR</title>
   </head>
 
   <body>
@@ -16,7 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/vinird">View on GitHub</a>
+          <a id="forkme_banner" href="http://vinird.github.io/images.html">Imagenes</a>
+          <a id="forkme_banner" href="http://vinird.github.io/room.html">Imagenes</a>
 
           <h1 id="project_title">Vinird.GitHub.io</h1>
           <h2 id="project_tagline"></h2>
