--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <h1><a href="http://vinird.github.io/images.html">Imagenes</a></h1>
+        <br>
+        <h1><a href="http://vinird.github.io/room.html">Room</a></h1>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
