--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="http://vinird.github.io/images.html">Imagenes</a>
-          <a id="forkme_banner" href="http://vinird.github.io/room.html">Imagenes</a>
 
           <h1 id="project_title">Vinird.GitHub.io</h1>
           <h2 id="project_tagline"></h2>
@@ -28,9 +26,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1><a href="http://vinird.github.io/images.html">Imagenes</a></h1>
+        <h1><a class="anchor" href="http://vinird.github.io/images.html">Imagenes</a></h1>
         <br>
-        <h1><a href="http://vinird.github.io/room.html">Room</a></h1>
+        <h1><a class="anchor" href="http://vinird.github.io/room.html">Room</a></h1>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
